Fix alignment for local/remote section

--- a/css/outer/jobs/jobs.less
+++ b/css/outer/jobs/jobs.less
@@ -59,7 +59,7 @@
       padding: 30px 40px 0 40px;
       box-sizing: border-box;
       -moz-box-sizing: border-box;
-      text-align: center;
+      text-align: left;
     }
   }
 
